--- a/src/assets/styles/components/_table.scss
+++ b/src/assets/styles/components/_table.scss
@@ -158,9 +158,7 @@
   }
 
   .button--freeze {
-    filter: opacity(.5);
-    cursor: not-allowed;
-    pointer-events: none;
+    @include element-disabled;
   }
 
   .checkbox--checked {
